--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,72 @@ body {
 }
 
 nav {
-    background:#222;
-    padding: 12px;
-    }
+    background-color: #1f3d2b;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;    
+    width: 100%;            
+}
 
-nav a {
+
+nav > a {
     color: white;
     text-decoration: none;
-    margin-right: 15px;
+    margin-right: 20px;    
+    font-size: 16px;
+}
+
+/* HOVER EFFECT */
+nav > a:hover {
+    color: #e8f0e8;
+}
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+
+.dropbtn {
+    background-color: #1f3d2b;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+
+.dropdown-content a {
+    color: #1f3d2b;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #e8f0e8;
+}
+
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+
+.dropdown:hover .dropbtn {
+    background-color: #16301d;
 }
 
 main {
