--- a/css/style.css
+++ b/css/style.css
@@ -3,70 +3,60 @@ body {
     margin: 0;
 }
 
-nav {
+.nav {
+    display: flex;                 
+    justify-content: space-between; 
+    align-items: center;
     background-color: #1f3d2b;
     padding: 10px 20px;
-    display: flex;
-    align-items: center;    
-    width: 100%;            
 }
 
+.navlinks {
+    list-style: none;
+    display: flex;                
+    margin: 0;
+    padding: 0;
+}
 
-nav > a {
+.navlinks li {
+    position: relative;          
+}
+
+.navlinks li a {
     color: white;
     text-decoration: none;
-    margin-right: 20px;    
-    font-size: 16px;
+    padding: 10px 15px;
+    display: block;
 }
 
-/* HOVER EFFECT */
-nav > a:hover {
+.navlinks li a:hover {
+    background-color: #16301d;
     color: #e8f0e8;
 }
 
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-
-.dropbtn {
-    background-color: #1f3d2b;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-
-.dropdown-content {
-    display: none;
+.dropdown-menu {
+    display: none;               
     position: absolute;
+    top: 100%;                   
+    left: 0;
     background-color: white;
     min-width: 180px;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 100;
 }
 
-
-.dropdown-content a {
+.dropdown-menu li a {
     color: #1f3d2b;
     padding: 12px 16px;
-    text-decoration: none;
-    display: block;
 }
 
-.dropdown-content a:hover {
+.dropdown-menu li a:hover {
     background-color: #e8f0e8;
 }
 
-
-.dropdown:hover .dropdown-content {
+.navlinks li.dropdown:hover .dropdown-menu {
     display: block;
 }
-
 
 .dropdown:hover .dropbtn {
     background-color: #16301d;
@@ -75,7 +65,6 @@ nav > a:hover {
 main {
     padding:20px;
 }
-
 
 #events { 
     padding: 40px; 
