--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ main {
 }
 
 .hero {
-  background-image: url('images/community-bg.jpg'); 
+  background-image: url('https://southerncomfortcabinrentals.icnd-cdn.com/images/blog/DowntownBlairsvilleGA.jpg'); 
   background-size: cover;       
   background-position: center;  
   height: 400px;                
