--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     display: flex;                 
     justify-content: space-between; 
     align-items: center;
-    background-color: #1f3d2b;
+    background-color: #1c2e4a;
     padding: 10px 20px;
 }
 
