--- a/css/style.css
+++ b/css/style.css
@@ -174,11 +174,11 @@ footer {
 }
 
 .footer-container {
-  display: flex;
-  justify-content: space-between;
+  display: flex !important;
+  justify-content: space-between !important;
   max-width: 1100px;
   margin: 0 auto;
-  flex-wrap: wrap; 
+  flex-wrap: wrap !important; 
   gap: 30px;
 }
 
