--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ main {
   border: 1px solid #ccc;
   padding: 15px;
   min-height: 80px;
+  position: relative;
 }
 
 .hero {
@@ -247,7 +248,7 @@ main {
 
 .has-event {
   background-color: #e6f4ec;
-  border: 2px solid #1f3d2b;
+  border: 1px solid #1f3d2b;
 }
 
 .has-event a {
