--- a/css/style.css
+++ b/css/style.css
@@ -126,10 +126,8 @@ main {
 
 .day {
   border: 1px solid #ccc;
-  width: 100% 
-  aspectratio: 1 / 1;
-  padding: 5px;
-  box-sizing: border-box;
+  padding: 10px; 
+  min-height: 80px;
   display: flex; 
   flex-direction: column; 
   justify-content: flex-start; 
@@ -251,7 +249,7 @@ main {
 
 .day-number {
   font-weight: bold;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
 }
 
 .has-event {
@@ -264,8 +262,8 @@ main {
   font-size: 0.75rem;
   display: block;
   margin-top: 2px;
-  word-wrap: break-word;
 }
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
