--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ footer {
 }
 
 .community-hero {
-  background-image: url('https://dt5602vnjxv0c.cloudfront.net/portals/13830/images/8.jpg');
+  background-image: url('https://roamingnelsons.com/wp-content/uploads/2025/05/meeks-2-1536x1152.jpg');
   background-size: cover;      /* makes image fill the section */
   background-position: center; /* centers the image */
   height: 400px;               /* sets section height */
