--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ footer {
 }
 
 .community-hero {
-  background-image: url('https://roamingnelsons.com/wp-content/uploads/2025/05/meeks-2-1536x1152.jpg');
+  background-image: url('blob:chrome-untrusted://media-app/29d8d1ee-d0b2-44d9-9ed9-5a7b3e031cee');
   background-size: cover;      /* makes image fill the section */
   background-position: center; /* centers the image */
   height: 400px;               /* sets section height */
