--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ footer {
 }
 
 .spotlight-hero {
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/7f/Lake_Trahlyta%2C_Vogel_State_Park%2C_Oct_2016_1.jpg');
+  background-image: url('https://uniongeneralhealthsystem.com/wp-content/uploads/2022/10/UGH_Aerial.jpg');
   background-size: cover;      /* makes image fill the section */
   background-position: center; /* centers the image */
   height: 400px;               /* sets section height */
