--- a/css/style.css
+++ b/css/style.css
@@ -620,7 +620,7 @@ footer {
 /* HISTORY PAGE */
 
 .history-hero {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-afYopXDuyniJnlwsIaWvE5GD6csm9yYt5-tqtWmuVEk-_Z3F:https://www.blairsvilleairport.com/uploads/1/5/1/3/151362778/375941237-10231405747425246-3541811142175807487-n.jpg&s');
+  background-image: url('https://appalachiantrail.org/wp-content/uploads/2025/03/Downtown-Blairsville-5-scaled.jpeg');
   background-size: cover;      /* makes image fill the section */
   background-position: center; /* centers the image */
   height: 400px;               /* sets section height */
